not sure why I didn't create a proper verb object - refactoring to that now